--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -20,6 +20,11 @@
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
+  
+  <div class="field">
+    <%= form.label :plant_class_id %>
+    <%= form.collection_select :plant_class_id, PlantClass.all, :id, :name, :include_blank => true %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
