--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -11,34 +11,34 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :kingdom_id %>
-    <%= form.collection_select :kingdom_id, Kingdom.all, :id, :name %>
+  <!--<div class="field">-->
+  <!--  <%#= form.label :kingdom_id %>-->
+  <!--  <%#= form.collection_select :kingdom_id, Kingdom.all, :id, :name %>-->
     
-  <div class="field">
-    <%= form.label :division_id %>
-    <%= form.text_field :division_id %>
-  </div>
+  <!--<div class="field">-->
+  <!--  <%#= form.label :division_id %>-->
+  <!--  <%#= form.collection_select :division_id, Division.all, :id, :name, :include_blank => true %>-->
+  <!--</div>-->
 
-  <div class="field">
-    <%= form.label :plant_class_id %>
-    <%= form.text_field :plant_class_id %>
-  </div>
+  <!--<div class="field">-->
+  <!--  <%#= form.label :plant_class_id %>-->
+  <!--  <%#= form.text_field :plant_class_id %>-->
+  <!--</div>-->
 
-  <div class="field">
-    <%= form.label :order_id %>
-    <%= form.collection_select :order_id, Order.all, :id, :name, :include_blank => true %>
-  </div>
+  <!--<div class="field">-->
+  <!--  <%#= form.label :order_id %>-->
+  <!--  <%#= form.collection_select :order_id, Order.all, :id, :name, :include_blank => true %>-->
+  <!--</div>-->
 
-  <div class="field">
-    <%= form.label :family_id %>
-    <%= form.collection_select :family_id, Family.all, :id, :name, :include_blank => true %>
-  </div>
+  <!--<div class="field">-->
+  <!--  <%#= form.label :family_id %>-->
+  <!--  <%#= form.collection_select :family_id, Family.all, :id, :name, :include_blank => true %>-->
+  <!--</div>-->
 
-  <div class="field">
-    <%= form.label :genus_id %>
-    <%= form.collection_select :genus_id, Genu.all, :id, :name, :include_blank => true %>
-  </div>
+  <!--<div class="field">-->
+  <!--  <%#= form.label :genus_id %>-->
+  <!--  <%#= form.collection_select :genus_id, Genu.all, :id, :name, :include_blank => true %>-->
+  <!--</div>-->
 
   <div class="field">
     <%= form.label :species_id %>
@@ -47,7 +47,12 @@
 
   <div class="field">
     <%= form.label :variety_id %>
-    <%= form.text_field :variety_id %>
+    <%= form.collection_select :variety_id, Variety.all, :id, :name, :include_blank => true %>
+  </div>
+  
+  <div class="field">
+    <%= form.label :cultivator_id %>
+    <%= form.collection_select :cultivator_id, Cultivator.all, :id, :name, :include_blank => true %>
   </div>
 
   <div class="actions">
