--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -15,6 +15,7 @@
     <% @divisions.each do |division| %>
       <tr>
         <td><%= division.name %></td>
+        <td><%= division.common_name %></td>
         <td><%= division.description %></td>
         <td><%= link_to 'Show', division %></td>
         <td><%= link_to 'Edit', edit_division_path(division) %></td>
