--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :order_id %>
+    <%= form.collection_select :order_id, Order.all, :id, :name, :include_blank => true %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
