--- a/app/views/genus/_form.html.erb
+++ b/app/views/genus/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :family_id %>
+    <%= form.collection_select :family_id, Family.all, :id, :name, :include_blank => true %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
