--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    <%= link_to 'Plants', plants_path %><br>
+    <%= link_to 'Plant Library', plants_path %> <%= link_to 'My Plants', plant_instances_path %>
+    <br>
     <%= yield %>
   </body>
 </html>
