--- a/app/views/species/_form.html.erb
+++ b/app/views/species/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :genus_id %>
+    <%= form.collection_select :genus_id, Genu.all, :id, :name, :include_blank => true %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
