--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
 
   <body>
     <%= link_to 'Plant Library', plants_path %> <%= link_to 'My Plants', plant_instances_path %>
+    <% if current_user %>
+      Logged in as <%= current_user.email %>.
+      <%= link_to 'Log Out', logout_path %>
+    <% else %>
+      <%= link_to 'Sign Up', signup_path %> or 
+      <%= link_to 'Log In', login_path %>
+    <% end %>
+
     <br>
     <%= react_component "Search" %>
     <%= yield %>
