--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -3,7 +3,7 @@
 <% if @plant.image_url != '' and @plant.image_url != nil %>
   <img src=<%= @plant.image_url %> width='250'/>
 <% end %>
-
+<%= @plant.image_url %>
 <h2> <%= @plant.scientific_name.html_safe %> </h2>
 <% @common_names.each do |name| %>
   <%= name.name %>,
