added plant and acquisition fields to plant instnace

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
 
     <br>
     <%#= react_component "Search" %>
-    <%= yield %>
+    <div id="main_content">
+      <%= yield %>
+    </div>
   </body>
 </html>
