--- a/app/views/water_records/_form.html.erb
+++ b/app/views/water_records/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :moment %>
-    <%= form.datetime_select :moment %>
+    <%= form.datetime_field :moment %>
   </div>
 
   <div class="field">
