--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,3 +26,10 @@ a:hover {
     color: #000000;
     background-color: transparent;
 }
+
+#main_content {
+    background-color: #fffdf2;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.2);
+    box-shadow: 0 6px 20px 0 rgba(0,0,0, 0.19);
+    padding: 1.5em;
+}
