--- a/app/views/high_level_locations/_form.html.erb
+++ b/app/views/high_level_locations/_form.html.erb
@@ -20,7 +20,17 @@
     <%= form.label :zip %>
     <%= form.text_field :zip %>
   </div>
-
+  
+  <div class="field">
+    <%= form.label :lat %>
+    <%= form.text_field :lat %>
+  </div>
+  
+  <div class="field">
+    <%= form.label :long %>
+    <%= form.text_field :long %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
