--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,6 +74,10 @@
                             $('#searchResults').show();
                             console.log("results " + msg);
                           }
+                      },
+                      error: function(XMLHttpRequest, textStatus, errorThrown) {
+                        $('#searchRequestList').html("<li class='searchResult'>Searching...</li>");
+                        $('#searchResults').show();
                       }
                   });
                   console.log(value);
