--- a/app/views/high_level_locations/show.html.erb
+++ b/app/views/high_level_locations/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>High Level Location::</strong>
+  <strong>High Level Location:</strong>
   <%= @high_level_location.name %>
 </p>
 
@@ -10,6 +10,15 @@
   <%= @high_level_location.zip %>
 </p>
 
+<p>
+<strong>Lat:</strong>
+  <%= @high_level_location.lat %>
+</p>
+
+<p>
+<strong>Long:</strong>
+  <%= @high_level_location.long %>
+</p>
 <strong>Locations</strong>
 
 <ul>
@@ -17,6 +26,39 @@
     <li> <%= link_to l.name, l %> </li>
   <% end %>
 </ul>
+<p>
+  <strong>Weather:</strong>
+  <% @high_level_location.set_forecast %>
+  Currently 
+  <%= @high_level_location.get_current_temp %>° as of <%= @high_level_location.get_current_time_formatted %>
+  <table>
+    <tr>
+      <% @high_level_location.get_forecast_days.each do |day| %>
+        <td>
+          <strong><%= @high_level_location.get_simple_date(day["time"]) %></strong><br/>
+          <img src=<%= @high_level_location.get_weather_icon(day["icon"]) %> width='75'/><br/>
+          <span style="color:red;">
+            <%= day["temperatureMax"] %>°
+          </span>
+          | 
+          <span style="color:blue;">
+            <%= day["temperatureLow"] %>° <!--overnight--><br/>
+          </span>
+          Chance of Rain: <%= day["precipProbability"] %><br/>
+          Dew Point: <%= day["dewPoint"] %><br/>
+          Humidity: <%= day["humidity"] %><br/>
+          Pressure: <%= day["pressure"] %><br/>
+          Cloud Cover: <%= day["cloudCover"] %><br/>
+          Wind: <%= day["windSpeed"] %><br/>
+          Moon Phase: <%= day["moonPhase"] %> <br/>
+          Ozone: <%= day["ozone"] %><br/>
+        </td>
+      <% end %>
+    </tr>
+  </table>
+  <%#= @high_level_location.get_full_forecast %>
+</p>
+
 
 <%= link_to 'Edit', edit_high_level_location_path(@high_level_location) %> |
 <%= link_to 'Back', high_level_locations_path %>
