--- a/app/views/high_level_locations/_form.html.erb
+++ b/app/views/high_level_locations/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :long %>
   </div>
   
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.collection_select :user_id, User.all, :id, :email, :include_blank => true %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
