--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= location.name %></td>
         <td><%= location.indoors %></td>
-        <td><%= location.high_level_location.name %></td>
+        <td><%= link_to location.high_level_location.name, location.high_level_location %></td>
         <td><%= link_to 'Show', location %></td>
         <td><%= link_to 'Edit', edit_location_path(location) %></td>
         <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
