--- a/app/views/plant_instances/my_plants.html.erb
+++ b/app/views/plant_instances/my_plants.html.erb
@@ -44,6 +44,19 @@ $(document).ready(function() {
       if(!this.checked && $('#location'+$location_val).is(':checked')){
         $('#location'+$location_val).prop( "checked", false );  
       }
+      if(this.checked && !$('#location'+$location_val).is(':checked')){
+        //check to see if all others are checked
+        var $all_checked = true;
+        $('.location'+$location_val).each(function( index ) {
+          if(!this.checked){
+            $all_checked = false;
+          }
+        });
+        //if so check the location checkbox
+        if($all_checked){
+          $('#location'+$location_val).prop( "checked", true );
+        }
+      }
     });
 });
 
